Change getDeadlineIndexes to collect a mutable list instead