@@ -7,6 +7,7 @@ import java.util.Comparator;
 import java.util.List;
 import java.util.function.Consumer;
 import java.util.stream.IntStream;
+import java.util.stream.Collectors;
 
 import bo.command.CommandException;
 import bo.storage.Storage;
@@ -163,7 +164,7 @@ public class Tracker {
                 .boxed()
                 .sorted(Comparator.comparing(index ->
                         ((Deadline) taskList.get(index)).getDueDate()))
-                .toList();
+                .collect(Collectors.toList());
     }
 
     /**
